--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -830,18 +830,24 @@ input:checked+.sliders:before {
   }
 }
 
-.connector-config-row {
-  border-radius: 15px;
-  font-size: 14px;
+.adapter-config-wrapper {
+  .connector-config-row {
+    border-radius: 0px;
+    font-size: 14px;
+
+    .col-box {
+      padding: 0px;
+    }
+
+    .form-control {
+      // height: calc(1.5em + 0.5rem + 2px) !important;
+      padding: 9px 16px;
+    }
+  }
 }
 
 .add-edit-connection-heading-row .add-edit-heading {
   color: #4c4c4c;
-}
-
-.connector-config-row .form-control {
-  // height: calc(1.5em + 0.5rem + 2px) !important;
-  padding: 9px 16px;
 }
 
 .connectors-main-wrapper .parent-row td:nth-child(1) {
@@ -1758,7 +1764,7 @@ input:checked+.sliders-Not .not-blue-bg {
   }
 
   .dropdown-search-bar {
-    border-radius: 5px;
+    // border-radius: 5px;
     border: 1px #dadada solid;
     padding: 5px;
     width: 100%;
@@ -1833,21 +1839,21 @@ input:checked+.sliders-Not .not-blue-bg {
   width: 18px;
   background-color: #fff;
   border: 1px solid #717171;
-  border-radius: 6px;
+  // border-radius: 6px;
 }
 
 /* On mouse-over, add a grey background color */
 .check-container:hover input~.checkmark {
   background-color: #fff;
   border: 1px solid #717171;
-  border-radius: 6px;
+  // border-radius: 6px;
 }
 
 /* When the checkbox is checked, add a blue background */
 .check-container input:checked~.checkmark {
   background-color: #717171;
   border: 1px solid #717171;
-  border-radius: 6px;
+  // border-radius: 6px;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
@@ -2235,7 +2241,7 @@ td {
   }
 
   .custom-select {
-    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 6'%3e%3cpath fill='%23343a40' d='M2 0L0 0h4zm0 5L0 2h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/10px 20px;
+    // background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 6'%3e%3cpath fill='%23343a40' d='M2 0L0 0h4zm0 5L0 2h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/10px 20px;
     background-color: #fff;
     font-family: "proxima-regular" !important;
   }
@@ -2264,6 +2270,7 @@ td {
       min-width: 70px;
       margin-right: 10px;
       font-family: "proxima-regular";
+      background-position-x: 92%;
 
       &:last-child {
         margin-right: 0px;
@@ -3089,10 +3096,21 @@ option {
   }
 
   .custom-select {
-    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 6'%3e%3cpath fill='%23343a40' d='M2 0L0 0h4zm0 5L0 2h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/10px 20px;
-    background-color: rgba(0, 0, 0, 0);
-    background-color: #fff;
-    font-family: "proxima-regular" !important;
+    appearance: none !important;
+    background-image: url(../images/select-dropdwon-icon.png);
+    background-repeat: no-repeat;
+    background-position-x: 97%;
+    background-position-y: 18px;
+    padding: 10px;
+    height: 40px;
+    margin-right: 15px;
+    color: #4C4C4C;
+    width: 100%;
+    border: 1px solid #ced4da;
+    // background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 6'%3e%3cpath fill='%23343a40' d='M2 0L0 0h4zm0 5L0 2h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/10px 20px;
+    // background-color: rgba(0, 0, 0, 0);
+    // background-color: #fff;
+    // font-family: "proxima-regular" !important;
   }
 
   .gray-border-bottom {
@@ -3135,7 +3153,7 @@ option {
       }
 
       .min-filed-width {
-        min-width: 450px;
+        min-width: 435px;
       }
 
       .dropdown-with-img {
@@ -3353,4 +3371,24 @@ option {
     background: rgba(255, 255, 255, 0.5);
     opacity: 0.7;
   }
+}
+
+.chip-txt {
+  background: #e0e0e0;
+  padding: 8px 12px;
+  border-radius: 20px;
+  margin-right: 8px;
+  padding-right: 7px;
+}
+
+
+.chip-icon {
+  background: #9d9e9e;
+  color: #fbfbfb;
+  border-radius: 20px;
+  padding: 3px 5px;
+  cursor: pointer;
+  font-size: 13px;
+  margin-left: 4px;
+  padding-top: 4px;
 }
